mejoras segun sonarqube y creacion de test de integracion